# DroneSearching

./: .gitignore  CMakeLists.txt  LICENSE  README.md  actual_simulations.py  aggregate_results.py  aggregate_square_data.py  algorithm_plot.py  algorithm_utils.py  algorithms.py  decimal_math.py  geometry_algorithms.py  plot.py  plot_demos.py  plot_squares.py  requirements.txt  sa.py  simulations.py  square_algorithms.py  square_plot.py  square_simulations.py  square_table.py  square_utils.py  table.py  utils.py  visualize_square_data.py
src/: algorithm_plot.py  algorithm_utils.py  benchmark_algorithms.cpp  geometry_algorithms.py  geometry_types.py  placement_algorithms.cpp  placement_algorithms.h  placement_algorithms.py  test.cpp  test_algorithms.cpp  utils.cpp  utils.hpp
